name:                zzbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zzbot#readme
license:             Apache-2.0
license-file:        LICENSE
author:              The zzbot authors
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:   Common,
                     Config
                     Db,
                     Exec,
                     LowLevelDb,
                     Xml
  other-modules:
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5,
                     containers,
                     either,
                     extra,
                     filepath,
                     megaparsec,
                     mtl,
                     prettyprinter,
                     prettyprinter-ansi-terminal,
                     process,
                     safe,
                     sqlite-simple,
                     text,
                     validation,
                     xml

executable zzbot
  main-is:           Main.hs
  hs-source-dirs:    app
  ghc-options:       -Wincomplete-patterns -Werror
  default-language:  Haskell2010
  build-depends:     base >=4.7 && <5,
                     containers,
                     directory,
                     mtl,
                     optparse-applicative,
                     validation,
                     zzbot

test-suite spec
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  other-modules:     ConfigSpec,
                     ExecSpec,
                     XmlSpec
  default-language:  Haskell2010
  hs-source-dirs:    test
  build-depends:     base >= 4.7 && < 5,
                     containers,
                     hspec,
                     mtl,
                     prettyprinter-ansi-terminal,
                     QuickCheck,
                     validation,
                     zzbot
