cabal-version:       2.4
name:                zzbot
version:             0.1.0.0
homepage:            https://github.com/githubuser/zzbot#readme
license:             Apache-2.0
license-file:        LICENSE
author:              The zzbot authors
category:            Tools
build-type:          Simple
extra-source-files:  README.md
-- FIXME: these files are only required by tests but data-files will include
-- them in the executable as well. See https://stackoverflow.com/q/51225261.
data-files:          configs/*.xml,
                     configs/tests/*.xml,
                     configs/examples/*.xml

library
  exposed-modules:   Common,
                     Config
                     Db,
                     Exec,
                     LowLevelDb,
                     Web,
                     Xml
  other-modules:
  hs-source-dirs:    src, web
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5,
                     aeson,
                     bytestring,
                     concurrent-extra,
                     containers,
                     either,
                     extra,
                     filepath,
                     megaparsec,
                     mtl,
                     prettyprinter,
                     prettyprinter-ansi-terminal,
                     process,
                     safe,
                     scotty,
                     sqlite-simple,
                     text,
                     validation,
                     xml

executable zzbot
  main-is:           Main.hs
  hs-source-dirs:    app
  ghc-options:       -Wincomplete-patterns -Werror
  default-language:  Haskell2010
  build-depends:     async,
                     base >=4.7 && <5,
                     containers,
                     directory,
                     extra,
                     mtl,
                     optparse-applicative,
                     validation,
                     zzbot

test-suite spec
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  other-modules:     ConfigSpec,
                     ExecSpec,
                     RandomConfigs,
                     XmlSpec,
                     ZZBotSpec,
                     Paths_zzbot
  autogen-modules:   Paths_zzbot
  default-language:  Haskell2010
  hs-source-dirs:    test
  build-depends:     base >= 4.7 && < 5,
                     containers,
                     generic-random,
                     hspec,
                     lens,
                     mtl,
                     prettyprinter-ansi-terminal,
                     process,
                     QuickCheck,
                     temporary,
                     validation,
                     zzbot
  build-tool-depends: zzbot:zzbot