load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library"
)

haskell_library(
    name = "web",
    srcs = glob(["*.hs"]),
    visibility = ["//app:__pkg__"],
    deps = [
                "//src:lib",
                "@stackage//:base",
                "@stackage//:blaze-html",
                "@stackage//:mtl",
                "@stackage//:scotty",
                "@stackage//:text",
    ],
)
